@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.8-16
-Date: 2004-10-04
+Version: 0.8-17
+Date: 2004-11-06
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
@@ -15,4 +15,4 @@ License: GPL version 2 or later.
  This R package includes code from the LDL and Metis packages,
  which are covered by separate copyrights.  See the file Copyrights for
  details.
-Packaged: Tue Nov  2 15:48:09 2004; bates
+Packaged: Sat Nov  6 12:23:00 2004; bates
