@@ -15,11 +15,13 @@ PKG_LIBS = ${LAPACK_LIBS} ${BLAS_LIBS}
 SOURCES_C =  \
 	    LU.c \
             Mutils.c \
-	    Metis_utils.c\
+	    Metis_utils.c \
+	    cscBlocked.c \
             cscMatrix.c \
             dense.c \
             factorizations.c \
             geMatrix.c \
+	    init.c \
 	    ldl.c \
 	    lmeRep.c \
             poMatrix.c \
@@ -31,7 +33,7 @@ SOURCES_C =  \
             triplet.c \
             triplet_to_col.c \
             tscMatrix.c \
-	    # flame.c
+            # flame.c
 OBJECTS = $(SOURCES_C:.c=.o)
 SHLIB = $(pkg)$(SHLIB_EXT)
 SUBDIRS = Metis
